--- a/dynamic-background.html
+++ b/dynamic-background.html
@@ -38,6 +38,40 @@
             color: #333;
         }
 
+        #color-history {
+            margin-top: 20px;
+            width: 80%;
+            max-height: 200px;
+            overflow-y: scroll;
+            border: 1px solid #333;
+            border-radius: 8px;
+            background-color: white;
+            padding: 10px;
+        }
+
+        .color-item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+        }
+
+        .color-box {
+            width: 40px;
+            height: 40px;
+            border: 1px solid #ccc;
+            margin-right: 10px;
+        }
+
+        .remove-btn {
+            margin-left: auto;
+            background: #f44336;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 5px 10px;
+            cursor: pointer;
+        }
+
         canvas {
             display: none;
         }
@@ -50,6 +84,8 @@
         <div id="current-color">Click on the video to detect color</div>
     </div>
 
+    <div id="color-history"></div>
+
     <canvas id="screenshot-canvas"></canvas>
 
     <script>
@@ -57,7 +93,9 @@
         const canvas = document.getElementById('screenshot-canvas');
         const ctx = canvas.getContext('2d');
         const currentColorText = document.getElementById('current-color');
+        const colorHistory = document.getElementById('color-history');
         let colorData = [];
+        let history = [];
 
         // Load the colors.csv file from the uploaded file
         fetch('colors.csv')
@@ -99,6 +137,46 @@
             return cname;
         }
 
+        // Function to add color to history
+        function addColorToHistory(R, G, B, colorName) {
+            const colorHex = `rgb(${R}, ${G}, ${B})`;
+            const colorEntry = {
+                colorHex,
+                colorName
+            };
+            history.push(colorEntry);
+            updateColorHistory();
+        }
+
+        // Function to update the color history UI
+        function updateColorHistory() {
+            colorHistory.innerHTML = '';
+            history.forEach((entry, index) => {
+                const colorItem = document.createElement('div');
+                colorItem.className = 'color-item';
+
+                const colorBox = document.createElement('div');
+                colorBox.className = 'color-box';
+                colorBox.style.backgroundColor = entry.colorHex;
+                colorItem.appendChild(colorBox);
+
+                const colorText = document.createElement('span');
+                colorText.innerText = entry.colorName;
+                colorItem.appendChild(colorText);
+
+                const removeBtn = document.createElement('button');
+                removeBtn.className = 'remove-btn';
+                removeBtn.innerText = 'Remove';
+                removeBtn.addEventListener('click', () => {
+                    history.splice(index, 1);
+                    updateColorHistory();
+                });
+                colorItem.appendChild(removeBtn);
+
+                colorHistory.appendChild(colorItem);
+            });
+        }
+
         // Setup video stream
         navigator.mediaDevices.getUserMedia({ video: true })
             .then(stream => {
@@ -122,10 +200,16 @@
             currentColorText.innerText = colorName;
 
             document.body.style.backgroundColor = `rgb(${R}, ${G}, ${B})`;
+
+            // Add the detected color to history
+            addColorToHistory(R, G, B, colorName);
         });
     </script>
 </body>
 </html>
+
+
+
 
 
 
