--- a/main.html
+++ b/main.html
@@ -1,41 +1,234 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Page</title>
+    <title>Color Detection Webpage</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        /* General Reset */
+        * {
             margin: 0;
-            padding: 20px;
-            text-align: center;
+            padding: 0;
+            box-sizing: border-box;
         }
-        button {
-            display: inline-block;
-            margin: 10px;
-            padding: 15px 30px;
-            font-size: 16px;
-            border: none;
+
+        /* Body Styling */
+        body {
+            font-family: 'Montserrat', sans-serif;
+            background: linear-gradient(135deg, #6e8efb, #a777e3);
+            color: #fff;
+        }
+
+        /* Navbar Styling */
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background: rgba(0, 0, 0, 0.8);
+            padding: 10px 20px;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
+        }
+
+        .navbar a {
+            color: #fff;
+            text-decoration: none;
+            padding: 14px 20px;
+            transition: background 0.3s;
+        }
+
+        .navbar a:hover {
+            background: rgba(255, 255, 255, 0.2);
             border-radius: 5px;
-            color: white;
-            background-color: #007BFF;
-            cursor: pointer;
-            transition: background-color 0.3s;
         }
-        button:hover {
-            background-color: #0056b3;
+
+        /* Header Section */
+        .header {
+            background-image: url('your-image-url.jpg');
+            background-position: center;
+            background-size: cover;
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 20px;
+        }
+
+        .header h1 {
+            font-size: 3em;
+            margin-bottom: 20px;
+        }
+
+        .header p {
+            font-size: 1.5em;
+            margin-bottom: 40px;
+        }
+
+        .header a {
+            text-decoration: none;
+            color: #fff;
+            background: #6e8efb;
+            padding: 15px 30px;
+            border-radius: 50px;
+            font-weight: 600;
+            font-size: 1.2em;
+            transition: background 0.3s, transform 0.3s;
+        }
+
+        .header a:hover {
+            background: #4f70db;
+            transform: translateY(-3px);
+        }
+
+        /* Features Section */
+        .features {
+            padding: 100px 20px;
+            background: rgba(136, 117, 117, 0.6);
+            background-image: url('your-image-url.jpg');
+            background-position: center;
+            background-size: cover;
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 20px;
+        }
+
+        .features h2 {
+            text-align: center;
+            margin-bottom: 40px;
+            font-size: 2.5em;
+        }
+
+        .features .feature-list {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+
+        .feature-box {
+            background-color: #f0f0f0;
+            padding: 20px;
+            border-radius: 10px;
+            width: 30%; /* Adjust the width as necessary */
+            text-align: center;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            cursor: pointer;
+        }
+
+        .feature-box:hover {
+            transform: scale(1.05);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .feature-box h3 {
+            margin-bottom: 15px;
+            color: #333;
+        }
+
+        .feature-box p {
+            color: #666;
+        }
+
+        
+
+        /* Contact Section */
+        .contact {
+            background: rgba(236, 204, 204, 0.6);
+            color: #fff;
+            background-image: url('your-image-url.jpg');
+            background-position: center;
+            background-size: cover;
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+        }
+
+        .contact h2 {
+            margin-bottom: 20px;
+            font-size: 2em;
+        }
+
+        /* Footer */
+        .footer {
+            text-align: center;
+            padding: 20px;
+            background: rgba(0, 0, 0, 0.8);
+        }
+
+        /* Utility Classes */
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
         }
     </style>
 </head>
 <body>
-    <h1>Color Features Main Page</h1>
-    <p>Select a feature to explore:</p>
-    <div>
-        <a href="dynamic-background.html"><button>Dynamic Background</button></a>
-        <a href="color-spaces.html"><button>Different Color Spaces</button></a>
-        <a href="color-blindness.html"><button>Color Blindness Simulation</button></a>
-        <a href="social-sharing.html"><button>Social Sharing</button></a>
-    </div>
+    <!-- Navbar -->
+    <nav class="navbar">
+        <a href="#home">Home</a>
+        <a href="#features">Features</a>
+        <a href="#techstack">Tech Stack</a>
+    </nav>
+
+    <!-- Header Section -->
+    <header class="header" id="home">
+        <div>
+            <h1>Color Detection Application</h1>
+            <p>Explore various features related to color detection and analysis</p>
+            <a href="#features">Explore Features</a>
+        </div>
+    </header>
+
+    <!-- Features Section -->
+    <section class="features" id="features">
+        <div class="container">
+            <h2>Features</h2>
+            <div class="feature-list">
+                <div class="feature-box" onclick="window.location.href='dynamic-background.html'">
+                    <h3>Dynamic Background</h3>
+                    <p>Background adjusts to selected colors and allows saving of chosen colors.</p>
+                </div>
+                <div class="feature-box" onclick="window.location.href='color-spaces.html'">
+                    <h3>Different Color Spaces</h3>
+                    <p>Displays RGB, HSV, HSL, CMYK, and HEX values for the selected color.</p>
+                </div>
+                <div class="feature-box" onclick="window.location.href='upload.html'">
+                    <h3>Upload Image</h3>
+                    <p>Detects and analyzes the color of the uploaded image.</p>
+                </div> 
+                <div class="feature-box" onclick="window.location.href='color-blindness.html'">
+                    <h3>CVD Simulation</h3>
+                    <p>Simulates color vision deficiency to show how colors appear to different vision types.</p>
+                </div>
+                <div class="feature-box" onclick="window.location.href='social-sharing.html'">
+                    <h3>Social Sharing</h3>
+                    <p>Shares saved colors on social media platforms like WhatsApp,Facebook,etc.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Tech Stack Section -->
+    <section class="contact" id="techstack">
+        <h2>Technologies Used : HTML, CSS, JavaScript, Python, Flask, OpenCV</h2>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <p>&copy; 2024 Color Detection Application. All rights reserved.</p>
+    </footer>
 </body>
 </html>
+
+
