--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             background-color: rgba(0, 0, 0, 0.892);
             padding: 20px;
             border-radius: 10px;
-            width: 30%; /* Adjust the width as necessary */
+            width: 30%; 
             text-align: center;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             cursor: pointer;
@@ -218,7 +218,7 @@
                     <h3>Different Color Spaces</h3>
                     <p>Displays RGB, HSV, HSL, CMYK, and HEX values for the selected color.</p>
                 </div>
-                <div class="feature-box" onclick="window.location.href='upload.html'">
+                <div class="feature-box" onclick="window.location.href='upload-image.html'">
                     <h3>Upload Image</h3>
                     <p>Detects and analyzes the color of the uploaded image.</p>
                 </div> 
